--- a/version 0/index.html
+++ b/version 0/index.html
@@ -8,6 +8,18 @@
     <title>Evaluación final módulo 1</title>
 </head>
 <body>
- Holis
+<header>
+
+</header>
+   <main>
+     <h1>
+ Creando Diversidad Digital
+     </h1>
+   </main>
+<footer>
+ <span class="Adalab-2018 Copyright"> 
+    Adalab © 2018
+</span>
+</footer>
 </body>
 </html>
