Add scss initial structure

--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,25 @@
 </head>
 <body>
 <header>
-
+    <div id="Bitmap">
+    <span class="Contacto">
+        Contacto 
+    </span>
+    <span class="Blog">
+            Blog
+     </span>
+ 
 </header>
 <main>
     <h1>
 Creando Diversidad Digital
     </h1>
-  </main>
+</main>
+
 <footer>
- <span class="Adalab-2018 Copyright"> 
+  <span class="Adalab-2018 Copyright"> 
     Adalab © 2018
-</span>
+  </span>
 </footer>
 </body>
 </html>
