--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,13 +9,25 @@
 </head>
 <body>
 <header>
-
+    <div id="Bitmap">
+    <span class="Contacto">
+        Contacto 
+    </span>
+    <span class="Blog">
+            Blog
+     </span>
+ 
 </header>
-<include src="./partials/main.html"></include>
+<main>
+    <h1>
+Creando Diversidad Digital
+    </h1>
+</main>
+
 <footer>
- <span class="Adalab-2018 Copyright"> 
+  <span class="Adalab-2018 Copyright"> 
     Adalab © 2018
-</span>
+  </span>
 </footer>
 </body>
 </html>
