--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,30 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./assets/css/main.css"/>
     <title>Evaluación final módulo 1</title>
 </head>
 <body>
-<header>
+<header class="header">
     <div id="Bitmap">
-    <span class="Contacto">
-        Contacto 
-    </span>
-    <span class="Blog">
-            Blog
-     </span>
- 
+    <img class="imagen" src="./assets/images/adalab-logo.jpg" alt="logoadalab">
+    <menu>
+      <li class="blog">BLOG</li>
+      <li class="contacto">CONTACTO</li>
+  </menu>
 </header>
 <main>
-    <h1>
-Creando Diversidad Digital
-    </h1>
+
+    <div class="contenedor">
+        <img class="fondo"src="./assets/images/fondo.jpg" alt="Cuartoconlamparadepie">
+        <div class="texto-encima">Creando Diversidad Digital</div>
+    </div>
+
 </main>
 
-<footer>
-  <span class="Adalab-2018 Copyright"> 
-    Adalab © 2018
-  </span>
+<footer class="footer">
+
+<span class="Adalab-2018 Copyright">
+  Adalab © 2018
+</span>
+
 </footer>
 </body>
 </html>
