--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,28 +10,28 @@
 </head>
 <body>
 <header class="header">
-    <div id="Bitmap">
     <img class="imagen" src="./assets/images/adalab-logo.jpg" alt="logoadalab">
-    <menu>
-      <li class="blog">BLOG</li>
-      <li class="contacto">CONTACTO</li>
+    <menu class="menu"></menu>
+    <li class="blog">BLOG </li>
+    <li class="contacto">CONTACTO</li>
   </menu>
 </header>
 <main>
 
-    <div class="contenedor">
+    <div class="container">
         <img class="fondo"src="./assets/images/fondo.jpg" alt="Cuartoconlamparadepie">
-        <div class="texto-encima">Creando Diversidad Digital</div>
+        <section class="text">Creando Diversidad Digital</section>
     </div>
-
+    
 </main>
 
 <footer class="footer">
-
+ 
 <span class="Adalab-2018 Copyright">
   Adalab © 2018
-</span>
+ </span>
 
 </footer>
+
 </body>
 </html>
